...
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_event_text"
            android:hint="Nombre del evento"
            android:layout_margin="16sp">

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/event_name_view"
            android:hint="Municipio"
            android:layout_margin="16sp">

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/date_picker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/date_view"
            app:layout_constraintTop_toBottomOf="@id/location_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hour_picker_btn"
            android:layout_margin="16sp"
            android:text="Seleccionar fecha"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hour_view"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
...
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/hour_view"
        app:layout_constraintTop_toBottomOf="@id/date_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_view"
        android:layout_margin="16sp"
        android:text="Seleccionar hora"
        />

    <TextView
        android:id="@+id/error_view"
        android:textColor="#ff0000"
        android:layout_width="match_parent"
...
        android:layout_margin="16sp"
        tools:text="Error"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/save_event_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="Guardar"
        />

    <Button
        android:id="@+id/cancel_event_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_event_btn"
...
