...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.unex.gps.weathevent.view.events.EventDetailsActivity">

    <TextView
        android:id="@+id/ubication_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
...

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thrid_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_row"
        android:padding="10sp"
        android:layout_margin="15sp"
        android:weightSum="2"
        >

        <LinearLayout
            android:id="@+id/indiceuv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10sp"
            android:background="@drawable/variable_background"
            android:layout_marginEnd="10sp"
            >

            <TextView
                android:id="@+id/indiceuv_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/ndice_uv"
                tools:text="Variable"/>
...
                android:textSize="20sp"
                tools:text="Valor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/humedad_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10sp"
            android:background="@drawable/variable_background"
...

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/export_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thrid_row"
        android:layout_marginTop="40sp"
...
