<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listEventFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ListEventFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15sp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16sp"
        android:contentDescription="Añadir evento"
        android:src="@drawable/baseline_add_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
